Fix: blurred background in header

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -42,12 +42,12 @@
     left: -20%;
     width: 140%;
     height: 140%;
-    //background:
-    //        center no-repeat linear-gradient(
-    //                        var(--color-dark-background),
-    //                        var(--color-dark-background)
-    //        ),
-    //-25vw 0/160vw no-repeat url('../../public/assets/img/pope-francis.png');
+    background:
+            center no-repeat linear-gradient(
+                            var(--color-dark-background),
+                            var(--color-dark-background)
+            ),
+    -25vw 0/160vw no-repeat url('../../assets/img/pope-francis.png');
     filter: blur(1rem);
   }
 
@@ -182,9 +182,9 @@
 
 
     &__glass-background {
-      //background:
-      //        center no-repeat linear-gradient(var(--color-dark-background), var(--color-dark-background)),
-      //        7vw -6.5rem/115vw auto no-repeat url(../../public/assets/img/pope-francis.png);
+      background:
+              center no-repeat linear-gradient(var(--color-dark-background), var(--color-dark-background)),
+              7vw -6.5rem/115vw auto no-repeat url(../../assets/img/pope-francis.png);
     }
 
     &__content {
@@ -229,7 +229,7 @@
     &__glass-background {
       background:
               center no-repeat linear-gradient(var(--color-dark-background), var(--color-dark-background)),
-              calc(-50vw + 650px) -6rem/105vw auto no-repeat url(/public/assets/img/pope-francis.png);
+              calc(-50vw + 650px) -6rem/105vw auto no-repeat url(../../assets/img/pope-francis.png);
     }
 
     &__content {
